--- a/docs/default.css
+++ b/docs/default.css
@@ -33,6 +33,15 @@ body {
     background: #f9f9f9;
 }
 
+.sidebar-home {
+    display: block;
+    margin-bottom: 1em;
+    padding-bottom: 0.75em;
+    border-bottom: 1px solid #ddd;
+    font-weight: 500;
+    color: #0366d6;
+}
+
 .sidebar h2 {
     font-size: 1em;
     margin: 0 0 1em 0;
