--- a/default.css
+++ b/default.css
@@ -84,8 +84,9 @@ body {
 }
 
 .sidebar .toc-sub a {
-    font-size: 0.85em;
+    font-size: 0.8em;
     color: #666;
+    line-height: 1.3;
 }
 
 /* Main content */
