--- a/default.css
+++ b/default.css
@@ -35,12 +35,9 @@ body {
 }
 
 .sidebar-home {
-    display: block;
-    margin-bottom: 1em;
-    padding-bottom: 0.75em;
-    border-bottom: 1px solid #ddd;
-    font-weight: 500;
-    color: #0366d6;
+    color: inherit;
+    text-decoration: none;
+    font-weight: inherit;
 }
 
 .sidebar h2 {
@@ -49,6 +46,12 @@ body {
     padding-bottom: 0.5em;
     border-bottom: 1px solid #ddd;
     color: #555;
+}
+
+.sidebar h2 .sidebar-home {
+    float: right;
+    position: relative;
+    top: -0.2em;
 }
 
 .sidebar ul {
@@ -123,7 +126,7 @@ body {
 .content {
     flex: 1;
     min-width: 0;
-    padding: 2em 3em;
+    padding: 0.1em 3em;
     max-width: 900px;
 }
 
